# Accounting-of-agricultural

./: manage.py  pyproject.toml
technical_t_agro/: asgi.py  settings.py  urls.py  wsgi.py
