[tool.poetry]
name = "technical-t-agro"
version = "0.1.0"
description = ""
authors = ["Aliaskar <alyas.toronov@mail.ru>"]
readme = "README.md"
packages = [{include = "technical_t_agro"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
